src/modules/75-cf/components/IdentifierText/IdentifierText.module.scss
/*
 * Copyright 2022 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

.container-border {
  border-radius: var(--spacing-xsmall);
  border: 1px solid var(--grey-200);
}

.copy-button {
  border: none;
  background: none;
  padding: 0;
  margin: 0 0 0 var(--spacing-small);
  transform: translateY(-2px);
  cursor: pointer;
}

